--- a/src/app/insights/insights.component.html
+++ b/src/app/insights/insights.component.html
@@ -6,28 +6,82 @@
   </div>
   <div id="insights-content">
     <div class="col insight">
-      <div class="insight-image"></div>
+      <div class="insight-image">
+        <img src="assets/infographics/thumb/cfo_research.jpg">
+      </div>
       <div class="insight-title">
-        Infographic 1
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/cfo_research.jpg">
+          Preview &nbsp; <i class="fas fa-search"></i>
+        </button>
+        <a class="btn btn-primary" href="assets/infographics/cfo_research.jpg" target="_blank" download="Infograph_CFO_Research.jpg">
+          Download &nbsp; <i class="fas fa-download"></i>
+        </a>
       </div>
     </div>
     <div class="col insight">
-      <div class="insight-image"></div>
+      <div class="insight-image">
+        <img src="assets/infographics/thumb/economic_growth.jpg">
+      </div>
       <div class="insight-title">
-          Infographic 2
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/economic_growth.png">
+          Preview &nbsp; <i class="fas fa-search"></i>
+        </button>
+        <a class="btn btn-primary" href="assets/infographics/economic_growth.png" target="_blank" download="Infograph_Economic_Growth.png">
+          Download &nbsp; <i class="fas fa-download"></i>
+        </a>
       </div>
     </div>
     <div class="col insight">
-      <div class="insight-image"></div>
+      <div class="insight-image">
+        <img src="assets/infographics/thumb/employment_trends_2018.jpg">
+      </div>
       <div class="insight-title">
-        Infographic 3
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/employment_trends_2018.png">
+          Preview &nbsp; <i class="fas fa-search"></i>
+        </button>
+        <a class="btn btn-primary" href="assets/infographics/employment_trends_2018.png" target="_blank" download="Infograph_Employment_Trends_2018.png">
+          Download &nbsp; <i class="fas fa-download"></i>
+        </a>
       </div>
     </div>
     <div class="col insight">
-      <div class="insight-image"></div>
-      <div class="insight-title">
-        Infographic 4
+      <div class="insight-image">
+        <img src="assets/infographics/thumb/spending_and_investment_plans_2018.jpg">
       </div>
-    </div>  
+      <div class="insight-title">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/spending_and_investment_plans_2018.png">
+          Preview &nbsp; <i class="fas fa-search"></i>
+        </button>
+        <a class="btn btn-primary" href="assets/infographics/spending_and_investment_plans_2018.png" target="_blank" download="Infograph_Spending_and_Investment_Plans_2018.png">
+          Download &nbsp; <i class="fas fa-download"></i>
+        </a>
+      </div>
+    </div>
+    <div class="col insight">
+      <div class="insight-image">
+        <img src="assets/infographics/thumb/risk_and_disruption.jpg">
+      </div>
+      <div class="insight-title">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/risk_and_disruption.png">
+          Preview &nbsp; <i class="fas fa-search"></i>
+        </button>
+        <a class="btn btn-primary" href="assets/infographics/risk_and_disruption.png" target="_blank" download="Infograph_Risk_and_Disruption.png">
+          Download &nbsp; <i class="fas fa-download"></i>
+        </a>
+      </div>
+    </div>
+    <div class="col insight">
+      <div class="insight-image">
+        <img src="assets/infographics/thumb/next_gen_technologies.jpg">
+      </div>
+      <div class="insight-title">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/next_gen_technologies.png">
+          Preview &nbsp; <i class="fas fa-search"></i>
+        </button>
+        <a class="btn btn-primary" href="assets/infographics/next_gen_technologies.png" target="_blank" download="Infograph_Next_Generation_Technologies.png">
+          Download &nbsp; <i class="fas fa-download"></i>
+        </a>
+      </div>
+    </div>
   </div>
-</div>
+</div>  
