--- a/src/app/reports/reports.component.html
+++ b/src/app/reports/reports.component.html
@@ -94,7 +94,7 @@
 
     <div class="download-report col-md-12 col-lg-6" [class.visible]="downloadable">
       <p>Thank you for completing the form. We have received your details. The report is now ready to be downloaded</p>
-      <a class="download btn btn-primary" href="../../assets/pdf/cfo_research.pdf" download="2018 Global Business & Spending Outlook.pdf"> Download Report 
+      <a class="download btn btn-primary" href="assets/pdf/Amex_cfo_report.pdf" target="_blank" download="2018 Global Business & Spending Outlook.pdf"> Download Report 
         <i class="fas fa-download"></i>
       </a>
     </div>
