--- a/src/app/nav-highlights/nav-highlights.component.html
+++ b/src/app/nav-highlights/nav-highlights.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light nav-highlights">
-
-  <div id="navbarSupportedContent">  <!-- if collapse needed, add class="collapse navbar-collapse" -->
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li *ngFor="let link of links" class="nav-item col-sm">
+      <li *ngFor="let link of links" class="nav-item">
         <a class="nav-link" href="{{link.linkhref}}">
           <div class="icon-container">
             <div class="icon-outline">
