--- a/src/app/nav-highlights/nav-highlights.component.scss
+++ b/src/app/nav-highlights/nav-highlights.component.scss
@@ -1,12 +1,13 @@
 @import '~sass/styles';
 
-.nav-highlights{
+/*.nav-highlights{
     position: absolute;
     bottom: 0;
     width: 100%;
     z-index:2000;
     font-size: 0.8rem;
     padding-bottom:0rem;
+    text-align: center;
 }
 .nav-highlights #navbarSupportedContent{
     margin: 0 auto;
@@ -71,4 +72,51 @@
     .nav-highlights .icon-outline{
         display:none;
     }
+}*/
+
+.nav-highlights{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    z-index:2000;
+    font-size: 0.8rem;
+}
+.nav-highlights .navbar-nav{
+    flex-direction: row;
+    margin: 0 auto;
+}
+.nav-highlights .nav-item a{
+    color:$light-blue;
+    width: 80px;
+    text-align: center;
+}
+.nav-highlights .icon-container{
+    text-align: center;
+    width:100%;
+    margin-bottom: .5rem;
+}
+.nav-highlights .icon-outline{
+    border:2px solid $light-blue;
+    width: 42px;
+    height: 42px;
+    padding: .6rem .7rem;
+    border-radius: 50%;
+    margin: 0 auto;
+    transition: all 0.2s ease-in-out;
+}
+.nav-highlights .nav-videos .icon-outline{
+    padding: .8rem .65rem;
+}
+.nav-highlights .nav-report .icon-outline{
+    padding: .7rem .8rem;
+}
+.nav-highlights .nav-item a:hover .icon-container .icon-outline{
+    box-shadow: 0 0 30px rgba($light-blue, 1);
+}
+.nav-highlights .icon{
+    width: 16px;
+    height: 16px;
+}
+.nav-highlights .icon use{
+    fill:$light-blue;
 }
