Final changes done with client comments
Work on sending form data needs to be done plus flie cleanup

--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -25,7 +25,7 @@ a.btn-primary{
     background-color: $yellow;
     border-color: $yellow;
     color: $dark-blue;
-    font-family: BentonSansMedium;
+    font-family: $font-stack-medium;
 }
 #section-contact-us .errors{
     font-size: 0.8rem;
