--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
+<div id="header-container">
+  <app-header></app-header>
+</div>
 <div class="container" id="section-home">
     <div class="section-body">
         <h1>Global Business &amp; Spending Outlook 2018</h1>
