--- a/src/app/insights/insights.component.html
+++ b/src/app/insights/insights.component.html
@@ -1,3 +1,6 @@
+<div id="header-container">
+  <app-header></app-header>
+</div>
 <div id="section-insights" class="container slick-init">
   <div class="heading-container">
     <div class="heading">
@@ -23,10 +26,10 @@
         <img src="assets/infographics/thumb/economic_growth.jpg">
       </div>
       <div class="insight-title">
-        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/economic_growth.png">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/economic_growth.jpg">
           Preview &nbsp; <i class="fas fa-search"></i>
         </button>
-        <a class="btn btn-primary" href="assets/infographics/economic_growth.png" target="_blank" download="Infograph_Economic_Growth.png">
+        <a class="btn btn-primary" href="assets/infographics/economic_growth.jpg" target="_blank" download="Infograph_Economic_Growth.jpg">
           Download &nbsp; <i class="fas fa-download"></i>
         </a>
       </div>
@@ -36,10 +39,10 @@
         <img src="assets/infographics/thumb/employment_trends_2018.jpg">
       </div>
       <div class="insight-title">
-        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/employment_trends_2018.png">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/employment_trends_2018.jpg">
           Preview &nbsp; <i class="fas fa-search"></i>
         </button>
-        <a class="btn btn-primary" href="assets/infographics/employment_trends_2018.png" target="_blank" download="Infograph_Employment_Trends_2018.png">
+        <a class="btn btn-primary" href="assets/infographics/employment_trends_2018.jpg" target="_blank" download="Infograph_Employment_Trends_2018.jpg">
           Download &nbsp; <i class="fas fa-download"></i>
         </a>
       </div>
@@ -49,10 +52,10 @@
         <img src="assets/infographics/thumb/spending_and_investment_plans_2018.jpg">
       </div>
       <div class="insight-title">
-        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/spending_and_investment_plans_2018.png">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/spending_and_investment_plans_2018.jpg">
           Preview &nbsp; <i class="fas fa-search"></i>
         </button>
-        <a class="btn btn-primary" href="assets/infographics/spending_and_investment_plans_2018.png" target="_blank" download="Infograph_Spending_and_Investment_Plans_2018.png">
+        <a class="btn btn-primary" href="assets/infographics/spending_and_investment_plans_2018.jpg" target="_blank" download="Infograph_Spending_and_Investment_Plans_2018.jpg">
           Download &nbsp; <i class="fas fa-download"></i>
         </a>
       </div>
@@ -62,10 +65,10 @@
         <img src="assets/infographics/thumb/risk_and_disruption.jpg">
       </div>
       <div class="insight-title">
-        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/risk_and_disruption.png">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/risk_and_disruption.jpg">
           Preview &nbsp; <i class="fas fa-search"></i>
         </button>
-        <a class="btn btn-primary" href="assets/infographics/risk_and_disruption.png" target="_blank" download="Infograph_Risk_and_Disruption.png">
+        <a class="btn btn-primary" href="assets/infographics/risk_and_disruption.jpg" target="_blank" download="Infograph_Risk_and_Disruption.jpg">
           Download &nbsp; <i class="fas fa-download"></i>
         </a>
       </div>
@@ -75,10 +78,10 @@
         <img src="assets/infographics/thumb/next_gen_technologies.jpg">
       </div>
       <div class="insight-title">
-        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/next_gen_technologies.png">
+        <button type="button" class="btn btn-primary btn-infograph" data-content="assets/infographics/next_gen_technologies.jpg">
           Preview &nbsp; <i class="fas fa-search"></i>
         </button>
-        <a class="btn btn-primary" href="assets/infographics/next_gen_technologies.png" target="_blank" download="Infograph_Next_Generation_Technologies.png">
+        <a class="btn btn-primary" href="assets/infographics/next_gen_technologies.jpg" target="_blank" download="Infograph_Next_Generation_Technologies.jpg">
           Download &nbsp; <i class="fas fa-download"></i>
         </a>
       </div>
