--- a/src/app/reports/reports.component.scss
+++ b/src/app/reports/reports.component.scss
@@ -26,7 +26,7 @@ a.btn-primary{
     background-color: $yellow;
     border-color: $yellow;
     color: $dark-blue;
-    font-family: BentonSansMedium;
+    font-family: $font-stack-medium;
 }
 #section-report .errors{
     font-size: 0.8rem;
