--- a/src/app/cps/cps.component.html
+++ b/src/app/cps/cps.component.html
@@ -1,3 +1,6 @@
+<div id="header-container">
+  <app-header></app-header>
+</div>
 <div id="section-cps" class="container">
     <div class="heading-container">
       <div class="heading">
