--- a/src/app/nav-highlights/nav-highlights.component.html
+++ b/src/app/nav-highlights/nav-highlights.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light nav-highlights">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="nav-container" id="navbarSupportedContent"><!-- class="collapse navbar-collapse" -->
     <ul class="navbar-nav mr-auto">
       <li *ngFor="let link of links" class="nav-item">
         <a class="nav-link" href="{{link.linkhref}}">
