--- a/src/app/nav-highlights/nav-highlights.component.scss
+++ b/src/app/nav-highlights/nav-highlights.component.scss
@@ -120,3 +120,9 @@
 .nav-highlights .icon use{
     fill:$light-blue;
 }
+.nav-container{
+    display:flex !important;
+    flex-basis:auto;
+    align-items: center;
+    flex-grow:1;
+}
