--- a/src/app/nav-press-kit/nav-press-kit.component.html
+++ b/src/app/nav-press-kit/nav-press-kit.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light nav-press-kit">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="nav-container" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li *ngFor="let link of links" class="nav-item">
         <a class="nav-link" href="{{link.linkhref}}">
