--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,17 +17,6 @@
 
 <nav id="mobile-nav" *ngIf="!desktop" class="fixed-top cfo-fixed navbar navbar-expand-lg navbar-light" [class.hidden]="desktop">
 
-    <!--<div id='piemenu' data-wheelnav
-    data-wheelnav-slicepath='DonutSlice'
-    data-wheelnav-spreader data-wheelnav-spreaderpath='PieSpreader'
-    data-wheelnav-navangle='225'
-    data-wheelnav-titleheight='45'
-    data-wheelnav-cssmode 
-    data-wheelnav-init>
-      <div *ngFor="let link of linksMobile" [attr.data-menuanchor]="link.anchor" class="nav-item" [attr.data-wheelnav-navitemtext]="link.icon" onmouseup='alert("link.anchor");'>
-        <div class=""><i class="fas {{link.icon}} fa-lg"></i></div>
-      </div>
-   </div>-->
    <div id="nav-name">
      <div class="title"></div>
      <div class="arrow"></div>
@@ -44,9 +33,33 @@
   <div id="nav-container">
     <div id="corner">
       <button class="navbar-toggler" type="button" data-toggle="active" data-target="#circularmenu" aria-controls="circularmenu" aria-expanded="false" aria-label="Toggle navigation">
-          <i id="menu-toggle" class="fa fa-bars fa-sm"></i>
-          <i id="menu-toggle-close" class="fa fa-times fa-sm"></i>
+          <svg id="icon-bars" class="inline-svg icon-bars" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="50%" y="50%"
+	 width="25px" height="25px" viewBox="0 0 25 25" xml:space="preserve">
+            <g class="svg-menu-toggle">
+
+            <path class="bar" d="M20.945,8.75c0,0.69-0.5,1.25-1.117,1.25H3.141c-0.617,0-1.118-0.56-1.118-1.25l0,0
+              c0-0.69,0.5-1.25,1.118-1.25h16.688C20.445,7.5,20.945,8.06,20.945,8.75L20.945,8.75z">
+            </path>
+            <path class="bar" d="M20.923,15c0,0.689-0.501,1.25-1.118,1.25H3.118C2.5,16.25,2,15.689,2,15l0,0c0-0.689,0.5-1.25,1.118-1.25 h16.687C20.422,13.75,20.923,14.311,20.923,15L20.923,15z">
+            </path>
+            <path class="bar" d="M20.969,21.25c0,0.689-0.5,1.25-1.117,1.25H3.164c-0.617,0-1.118-0.561-1.118-1.25l0,0
+              c0-0.689,0.5-1.25,1.118-1.25h16.688C20.469,20,20.969,20.561,20.969,21.25L20.969,21.25z">
+            </path>
+            <!-- needs to be here as a 'hit area' -->
+            <rect width="100%" height="100%" fill="none">
+
+            </rect>
+          </g>
+        </svg>
       </button>
+      <!-- <div class="icons">
+        <div class="bars">
+          <i id="menu-toggle" class="fa fa-bars fa-sm"></i>
+        </div>
+        <div class="times">
+          <i id="menu-toggle-close" class="fa fa-times fa-sm"></i>
+        </div>
+      </div> -->
     </div>
   </div>
 
