--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -41,7 +41,6 @@
 .popover{
     background-color: rgba($dark-blue,.63);
     color: $white;
-    font-family: BentonSansLight;
 }
 .popover-body{
     color:$white;
@@ -89,10 +88,63 @@
 #mobile-nav #nav-container button #menu-toggle-close{
     color: $white;
 }
-#mobile-nav #nav-container button #menu-toggle-close{
-    margin: 0px auto -100px;
-    display: none;
+#mobile-nav #nav-container button .fa-times{
+    //margin-bottom: -100px;
+    opacity: 0;
 }
+#nav-container #icon-bars{
+    width: 25px;
+    height: 25px;
+    color: $white;
+}
+#nav-container .icons{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+#nav-container .icons .times{
+    opacity: 0;
+}
+
+#icon-bars .svg-menu-toggle {
+	fill:#fff;
+	cursor:pointer;
+	.bar {
+		-webkit-transform:rotate(0) translateY(0) translateX(0);
+		transform:rotate(0) translateY(0) translateX(0);
+		opacity:1;
+
+		-webkit-transform-origin: 20px 10px;
+		transform-origin: 20px 10px;
+
+		-webkit-transition: -webkit-transform 0.4s ease-in-out, opacity 0.2s ease-in-out;
+	    transition: transform 0.4s ease-in-out, opacity 0.2s ease-in-out;
+	}
+  .bar:nth-of-type(1) {
+    -webkit-transform-origin: 20px 10px;
+		transform-origin: 20px 10px;
+  }
+   .bar:nth-of-type(3) {
+    -webkit-transform-origin: 20px 20px;
+		transform-origin: 20px 20px;
+   }
+}
+#icon-bars.clicked .svg-menu-toggle {
+    .bar:nth-of-type(1) {
+		-webkit-transform:rotate(-45deg) translateY(0) translateX(0);
+		transform:rotate(-45deg) translateY(0) translateX(0);
+    }
+    .bar:nth-of-type(2) {
+		opacity:0;
+    }
+    .bar:nth-of-type(3) {
+    	-webkit-transform:rotate(45deg) translateY(0em) translateX(0em);
+		transform:rotate(45deg) translateY(0em) translateX(0em);
+    }
+}
+
 #mobile-nav #navbar-items{
     position: fixed;
     bottom:0;
