--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,3 +1,6 @@
+<div id="header-container">
+  <app-header></app-header>
+</div>
 <div id="section-presentation" class="container">
   <div class="heading-container">
     <div class="heading">
