--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -20,7 +20,7 @@
     margin: 0 auto;
 }
 
-@include media-breakpoint-down(xs){
+@include media-breakpoint-down(sm){
     #section-presentation .inner-slide img{
         max-width: 100%;
         margin: 0 auto;
