--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -14,4 +14,11 @@
       </div>
     </div> 
   </div>
+  <div id="download-presentation" class="row">
+    <div class="col-md-12 text-center">
+      <a class="btn btn-primary" href="assets/pdf/Amex_CFO_study_Presentation_for_Media_PDF.pdf" target="_blank" download="Amex_CFO_study_Presentation_for_Media_PDF.pdf">
+        Download Presentation &nbsp; <i class="fas fa-download"></i>
+      </a>
+    </div>
+  </div>
 </div>
