--- a/src/app/press-release/press-release.component.html
+++ b/src/app/press-release/press-release.component.html
@@ -19,10 +19,10 @@
   </div>
   <div class="row buttons">
     <div class="col-lg-6 english-btn">
-      <a href="#" class="btn btn-primary" download="press-release-en.pdf">Download Press Release</a>
+      <a href="assets/pdf/CFO_Survey_Press_Release_Middle_East_English.pdf" class="btn btn-primary" target="_blank" download="CFO_Survey_Press_Release_Middle_East_English.pdf">Download Press Release</a>
     </div>
     <div class="col-lg-6 arabic-btn">
-      <a href="#" class="btn btn-primary" download="press-release-ar.pdf">حمل البيان الصحفي</a>
+      <a href="assets/pdf/CFO_Survey_Press_Release_Middle_East_Arabic.pdf" class="btn btn-primary" target="_blank" download="CFO_Survey_Press_Release_Middle_East_Arabic.pdf">حمل البيان الصحفي</a>
     </div>
   </div>
 </div>
