--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -30,7 +30,7 @@
         </div>
         <div class="col-sm-12 col-lg-8">
           <p>The 2018 Global Business &amp; Spending Outlook details Middle East’s executives’ views on the economic outlook, spending plans, and the future of technology. </p>
-          <p>The cross-industry findings in the joint American Express and Institutional Investor¹ study are based on a survey of 870 CFOs and other senior finance executives at companies with annual revenue of $500 million or more from more than 21 countries worldwide. And for the first time in its 11-year history, the study includes respondents from the Middle East region –– adding to its holistic view of a dynamic global services economy.</p>
+          <p>The cross-industry findings in the joint American Express and Institutional Investor¹ study are based on a survey of 870 CFOs and other senior finance executives at companies with annual revenue of $500 million or more from more than 21 countries worldwide. And for the first time in its 11-year history, the study includes respondents from the Middle East region – adding to its holistic view of a dynamic global services economy.</p>
         </div>
       </div>
     </div>
