--- a/src/app/cps/cps.component.html
+++ b/src/app/cps/cps.component.html
@@ -96,7 +96,7 @@
         </form>
       </div>
   
-      <div class="confirmation col-md-6" [class.visible]="formFilled">
+      <div class="confirmation col-md-12 col-lg-6" [class.visible]="formFilled">
         <p>Thank you for contacting us. We have received your message and will respond as soon as we can.</p>
       </div>
     </div>
